# curl-formatter-v2

./: .gitignore  index.html  manifest.json  package.json
docs/: index.html  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
