[package]
name = "curl-runner"
version = "1.0.0"
edition = "2021"

[lib]
name = "curl_runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
